Fix styles for long highlighted lines

--- a/test/html/baselines/diff-highlighting.html
+++ b/test/html/baselines/diff-highlighting.html
@@ -1,7 +1,8 @@
 <pre class="grvsc-container grvsc-has-line-highlighting default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">;</span></span></span>
 <span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></span>
 <span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">a</span><span class="mtk1"> = </span><span class="mtk8">'a'</span><span class="mtk1">;</span></span></span>
-<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">b</span><span class="mtk1"> = </span><span class="mtk8">'b'</span><span class="mtk1">;</span></span></span></code></pre>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">b</span><span class="mtk1"> = </span><span class="mtk8">'b'</span><span class="mtk1">;</span></span></span>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk11">veryLongLineOfAddedCodeVeryLongLineOfAddedCodeVeryLongLineOfAddedCodeVeryLongLineOfAddedCode</span><span class="mtk1">();</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
@@ -19,13 +20,13 @@
   
   .grvsc-code {
     display: table;
+    position: relative;
+    width: 100%;
   }
   
   .grvsc-line {
     display: table-row;
     box-sizing: border-box;
-    width: 100%;
-    position: relative;
   }
   
   .grvsc-line > * {
@@ -100,6 +101,7 @@
   .default-dark .mtk12 { color: #9CDCFE; }
   .default-dark .mtk7 { color: #B5CEA8; }
   .default-dark .mtk8 { color: #CE9178; }
+  .default-dark .mtk11 { color: #DCDCAA; }
   .default-dark .grvsc-line-highlighted::before {
     background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
     box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
