--- a/test/html/baselines/npm-extension.html
+++ b/test/html/baselines/npm-extension.html
@@ -1,10 +1,10 @@
 <pre class="grvsc-container synthwave-vscode" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki">/**</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk8 mtki">{*}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">cache</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk8 mtki">{string}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">key</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk9 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk8 mtki">{object}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">value</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk9 mtki">{*}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">cache</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk9 mtki">{string}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">key</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> * </span><span class="mtk10 mtki">@param</span><span class="mtk4 mtki"> </span><span class="mtk9 mtki">{object}</span><span class="mtk4 mtki"> </span><span class="mtk3 mtki">value</span></span></span>
 <span class="grvsc-line"><span class="grvsc-source"><span class="mtk4 mtki"> */</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk9">async</span><span class="mtk1"> </span><span class="mtk9">function</span><span class="mtk1"> </span><span class="mtk6">mergeCache</span><span class="mtk1">(</span><span class="mtk3 mtki">cache</span><span class="mtk1">, </span><span class="mtk3 mtki">key</span><span class="mtk1">, </span><span class="mtk3 mtki">value</span><span class="mtk1">) {</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">  </span><span class="mtk9">await</span><span class="mtk1"> </span><span class="mtk3">cache</span><span class="mtk1">.</span><span class="mtk6">set</span><span class="mtk1">(</span><span class="mtk3">key</span><span class="mtk1">, { </span><span class="mtk9">...</span><span class="mtk1">(</span><span class="mtk9">await</span><span class="mtk1"> </span><span class="mtk3">cache</span><span class="mtk1">.</span><span class="mtk6">get</span><span class="mtk1">(</span><span class="mtk3">key</span><span class="mtk1">)), </span><span class="mtk9">...</span><span class="mtk3">value</span><span class="mtk1"> });</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk10">async</span><span class="mtk1"> </span><span class="mtk10">function</span><span class="mtk1"> </span><span class="mtk6">mergeCache</span><span class="mtk1">(</span><span class="mtk3 mtki">cache</span><span class="mtk1">, </span><span class="mtk3 mtki">key</span><span class="mtk1">, </span><span class="mtk3 mtki">value</span><span class="mtk1">) {</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">  </span><span class="mtk10">await</span><span class="mtk1"> </span><span class="mtk3">cache</span><span class="mtk1">.</span><span class="mtk6">set</span><span class="mtk1">(</span><span class="mtk3">key</span><span class="mtk1">, { </span><span class="mtk10">...</span><span class="mtk1">(</span><span class="mtk10">await</span><span class="mtk1"> </span><span class="mtk3">cache</span><span class="mtk1">.</span><span class="mtk6">get</span><span class="mtk1">(</span><span class="mtk3">key</span><span class="mtk1">)), </span><span class="mtk10">...</span><span class="mtk3">value</span><span class="mtk1"> });</span></span></span>
 <span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">}</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
@@ -97,9 +97,9 @@
   
   .synthwave-vscode { background-color: #262335; }
   .synthwave-vscode .mtki { font-style: italic; }
-  .synthwave-vscode .mtk4 { color: #495495; }
-  .synthwave-vscode .mtk9 { color: #FEDE5D; }
-  .synthwave-vscode .mtk8 { color: #FE4450; }
+  .synthwave-vscode .mtk4 { color: #848BBD; }
+  .synthwave-vscode .mtk10 { color: #FEDE5D; }
+  .synthwave-vscode .mtk9 { color: #FE4450; }
   .synthwave-vscode .mtk3 { color: #FF7EDB; }
   .synthwave-vscode .mtk1 { color: #FFFFFF; }
   .synthwave-vscode .mtk6 { color: #36F9F6; }
